// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PlayingButton when not playing renders as expected 1`] = `
<WithStyles(ForwardRef(IconButton))
  aria-label="Playing"
  onClick={[Function]}
>
  <Memo(ForwardRef(CheckCircleOutlineIcon))
    className="test"
  />
</WithStyles(ForwardRef(IconButton))>
`;

exports[`PlayingButton when playing renders as expected 1`] = `
<WithStyles(ForwardRef(IconButton))
  aria-label="Playing"
  onClick={[Function]}
>
  <Memo(ForwardRef(CheckCircleTwoToneIcon))
    className="test"
    color="primary"
  />
</WithStyles(ForwardRef(IconButton))>
`;
